LDAP authentication changes
SVN-Revision: 622